# backend/internal/api/router.go
@@ -91,6 +91,10 @@ func NewRouter(params RouterParams) (http.Handler, error) {
 	protected.GET("/media/:id/thumbnail", params.Media.Thumbnail)
 	protected.GET("/media/:id/stream", params.Stream.Stream)
 	protected.HEAD("/media/:id/stream", params.Stream.Stream)
+	protected.GET("/media/:id/stream/source", params.Stream.Source)
+	protected.HEAD("/media/:id/stream/source", params.Stream.Source)
+	protected.GET("/media/:id/stream/faststart/:fingerprint", params.Stream.Faststart)
+	protected.HEAD("/media/:id/stream/faststart/:fingerprint", params.Stream.Faststart)
 	protected.GET("/media/:id/original", params.Stream.Original)
 	protected.HEAD("/media/:id/original", params.Stream.Original)
 	protected.GET("/media/:id/user-data", params.UserData.Get)
